# mediacorral

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  analysis.dockerfile  buf.gen.yaml  build.sh  coordinator.dockerfile  packagelist.txt  readme.md
analysis-cli/: Cargo.toml
analysis-cli/src/: main.rs
analysis-cli/src/utils/: mod.rs
analysis-cli/src/utils/subtitles/pgs/: binary_reader.rs  processor.rs
analysis-service/: Cargo.toml  build.rs
analysis-service/src/: main.rs  proto.rs  rayon_helpers.rs
analysis-service/src/utils/: mod.rs
analysis-service/src/utils/subtitles/: mod.rs  vobsub.rs
analysis-service/src/utils/subtitles/pgs/: binary_reader.rs  mod.rs  processor.rs  window_adapter.rs
backend/: .golangci.yml  config.go  go.mod  go.sum  main.go
backend/application/: application.go
backend/dbapi/: dbapi.go  schemas.go
backend/dbapi/migrations/: 00-init.sql  99-migrations.go
backend/grpc_services/: coordinator_notifications.go
backend/helpers/analysis/: analysis.go  types.go
backend/helpers/blobs/: blobs.go
backend/helpers/config/: config.go
backend/helpers/exports/: exports.go
backend/helpers/opensubtitles/: opensubtitles.go  types.go
backend/helpers/tmdb/: tmdb.go
backend/twirp_services/: coordinator_api.go
diagrams/: architecture.puml  database.puml
drive-controller/: build.rs
drive-controller/src/: async_udev.rs  main.rs
drive-controller/src/makemkv/: messaging.rs  mod.rs
frontend/: gen_grpc.sh  index.html  package-lock.json  package.json  vite.config.mts
frontend/public/: mediacorral.webmanifest
frontend/src/: App.vue  apiTypes.ts  components.d.ts  main.ts  typed-router.d.ts
frontend/src/components/: DriveMonitor.vue  ManualMatch.vue  ManualMatchDialog.vue  MatchSelector.vue  MetadataImport.vue  PromptService.vue  SuspicionDialog.vue  TrackInspector.vue
frontend/src/pages/: index.vue  meta_import.vue  ripjobs.vue
frontend/src/pages/catalogue/: [id].vue  index.vue
frontend/src/pages/ripjobs/: [id].vue  index.vue
frontend/src/router/: index.ts
frontend/src/scripts/: commonTypes.ts  config.ts  uiUtils.ts  utils.ts
frontend/src/stores/: app.ts
frontend/src/styles/: main.scss
mediacorral-coordinator/: Cargo.toml
mediacorral-coordinator/src/: application.rs  main.rs
mediacorral-coordinator/src/blob_storage/: mod.rs
mediacorral-coordinator/src/db/: mod.rs  schemas.rs  up.sql
mediacorral-coordinator/src/managers/: mod.rs
mediacorral-coordinator/src/managers/opensubtitles/: mod.rs
mediacorral-coordinator/src/managers/tmdb/: mod.rs  types.rs
mediacorral-coordinator/src/services/: api.rs  jobs.rs  mod.rs  notifications.rs
mediacorral-drive-controller/: Cargo.toml  config.yml
mediacorral-drive-controller/src/: async_udev.rs  main.rs  proto.rs
mediacorral-drive-controller/src/makemkv/: csv.rs
mediacorral-frontend/: eslint.config.js
mediacorral-frontend/src/: main.ts  typed-router.d.ts
mediacorral-frontend/src/components/: DriveMonitor.vue  PromptService.vue
mediacorral-frontend/src/pages/catalogue/: [id].vue
mediacorral-proto/: Cargo.toml  build.rs
mediacorral-proto/proto/: buf.yaml  coordinator.proto  drive_controller.proto  ripper.proto
mediacorral-proto/proto/coordinator/: api.proto  jobs.proto  main.proto
mediacorral-proto/proto/mediacorral/common/tmdb/v1/: main.proto
mediacorral-proto/proto/mediacorral/coordinator/v1/: api.proto  exports.proto  jobs.proto  main.proto  notifications.proto
mediacorral-proto/proto/mediacorral/drive_controller/v1/: main.proto
mediacorral-proto/proto/mediacorral/server/v1/: api.proto  exports.proto  metadata.proto  notifications.proto
mediacorral-proto/proto/mediacorral/transcription/v1/: api.proto
mediacorral-proto/src/: lib.rs
mediacorral-ripper/: Cargo.toml
mediacorral-runner/: Cargo.toml
mediacorral-server/: Cargo.toml
mediacorral-server/src/: application.rs  main.rs  metaextract.rs  rayon_helpers.rs
mediacorral-server/src/blob_storage/: mod.rs
mediacorral-server/src/db/: mod.rs  schemas.rs  up.sql
mediacorral-server/src/managers/: exports.rs
mediacorral-server/src/managers/opensubtitles/: mod.rs
mediacorral-server/src/managers/tmdb/: mod.rs  types.rs
mediacorral-server/src/services/: api.rs  mod.rs  notifications.rs
mediacorral-server/src/workers/: mod.rs
mediacorral-server/src/workers/mkv_analysis/: mod.rs
mediacorral-server/src/workers/mkv_analysis/subtitles/: mod.rs  ocr.rs  srt.rs  vobsub.rs
mediacorral-server/src/workers/mkv_analysis/subtitles/pgs/: binary_reader.rs  processor.rs
mediacorral-server/src/workers/subtitles/: mod.rs  ocr.rs  utils.rs  vobsub.rs
mediacorral-server/src/workers/subtitles/pgs/: mod.rs  pgs_types.rs  processor.rs
mediacorral-utils/: Cargo.toml
mediacorral-utils/src/utils/subtitles/: mod.rs  srt.rs  utils.rs
proto/mediacorral/analysis/v1/: main.proto
proto/mediacorral/drive_controller/v1/: main.proto
proto/mediacorral/server/v1/: api.proto  metadata.proto  tmdb.proto
sql/: find_duplicates.sql  prune_matches.sql  up.sql
src/: async_udev.rs  blob_storage.rs  config.rs  drive_controller.rs  main.rs  task_queue.rs
src/application/: mod.rs  types.rs
src/blob_storage/: mod.rs  rip_dir.rs  util_funcs.rs
src/db/: mod.rs  schemas.rs
src/exports_manager/: mod.rs
src/makemkv/: csv.rs  mod.rs
src/media_helpers/: extract_subtitles.rs  extract_video_track.rs  mod.rs
src/routes/: blobs.rs  data_imports.rs  exports.rs  mod.rs  ripping.rs  tagging.rs
src/tagging/: mod.rs  types.rs
src/tagging/analyzers/: mod.rs
src/tagging/importers/: mod.rs  opensubtitles.rs
src/tagging/importers/tmdb/: mod.rs  types.rs
