[package]
name = "mediacorral"
version = "0.1.0"
edition = "2021"

[dependencies]
async-stream = "0.3.6"
futures = "0.3.31"
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
eject = "0.1.1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
uuid = { version = "1.12.0", features = ["v4"] }
md5 = "0.7.0"
