[package]
name = "mediacorral"
version = "0.1.0"
edition = "2021"

[dependencies]
async-stream = "0.3.6"
futures = "0.3.31"
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
eject = "0.1.1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
uuid = { version = "1.12.0", features = ["v4"] }
md5 = "0.7.0"
anyhow = "1.0.95"
lazy_static = "1.5.0"
reqwest = { version = "0.12.12", features = ["json"] }
matroska = "0.28.0"
serde_json = "1.0.137"
udev = "0.9.1"
nix = { version = "0.29.0", features = ["poll"] }
clap = { version = "4.5.26", features = ["derive"] }
pathdiff = "0.2.3"
thiserror = "2.0.11"
