[package]
name = "mediacorral"
version = "0.1.0"
edition = "2021"

[dependencies]
async-stream = "0.3.6"
futures = "0.3.31"
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
eject = "0.1.1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
uuid = { version = "1.12.0", features = ["v4"] }
md5 = "0.7.0"
anyhow = "1.0.95"
lazy_static = "1.5.0"
matroska = "0.28.0"
serde_json = "1.0.137"
udev = "0.9.1"
nix = { version = "0.29.0", features = ["poll"] }
clap = { version = "4.5.26", features = ["derive"] }
pathdiff = "0.2.3"
thiserror = "2.0.11"
serde_with = { version = "3.12.0", features = ["hex"] }
levenshtein = "1.0.5"
rayon = "1.10.0"
regex = "1.11.1"
lazy-regex = "3.4.1"

[dependencies.reqwest]
version = "0.12.18"
default-features = false
# Sometimes openssl triggers Cloudflare's firewall???
# Rustls seems to get past it.
features = ["json", "rustls-tls", "charset", "http2"]
