[package]
name = "mediacorral-analysis-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = "2.9.1"
clap = { version = "4.5.39", features = ["derive"] }
hex = "0.4.3"
image = "0.25.6"
leptess = "0.14.0"
matroska-demuxer = "0.7.0"
md5 = "0.7.0"
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_with = { version = "3.12.0", features = ["hex"] }
thiserror = "2.0.12"
