[package]
name = "mediacorral-analysis-service"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bitflags = "2.9.1"
clap = { version = "4.5.39", features = ["derive"] }
hex = "0.4.3"
image = "0.25.6"
leptess = "0.14.0"
matroska-demuxer = "0.7.0"
md5 = "0.7.0"
prost = "0.14.1"
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_with = { version = "3.12.0", features = ["hex"] }
thiserror = "2.0.12"
tokio = { version = "1.48.0", features = ["full"] }
tonic = "0.14.2"
tonic-prost = "0.14.2"
tonic-reflection = "0.14.2"

[build-dependencies]
tonic-prost-build = "0.14.2"
