[package]
name = "mediacorral-coordinator"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.39", features = ["derive"] }
futures = "0.3.31"
lazy-regex = "3.4.1"
levenshtein = "1.0.5"
mediacorral-proto = { version = "0.1.0", path = "../mediacorral-proto" }
pathdiff = "0.2.3"
rayon = "1.10.0"
reqwest = { version = "0.12.19", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_with = { version = "3.12.0", features = ["hex"] }
serde_yaml = "0.9.34"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tonic = "0.13.1"
tonic-web = "0.13.1"
uuid = { version = "1.17.0", features = ["v4"] }
