[package]
name = "mediacorral-ripper"
version = "0.1.0"
edition = "2024"

[dependencies]
async-stream = "0.3.6"
clap = { version = "4.5.39", features = ["derive"] }
eject = "0.1.1"
futures = "0.3.31"
mediacorral-proto = { version = "0.1.0", path = "../mediacorral-proto" }
nix = { version = "0.30.1", features = ["poll"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
tokio = { version = "1.45.1", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tonic = "0.13.1"
udev = { version = "0.9.3", features = ["sync", "send"] }
