[package]
name = "mediacorral-server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "metaextract"
path = "src/metaextract.rs"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.39", features = ["derive"] }
futures = "0.3.31"
hex = "0.4.3"
image = "0.25.6"
lazy-regex = "3.4.1"
leptess = "0.14.0"
levenshtein = "1.0.5"
matroska-demuxer = "0.7.0"
md5 = "0.7.0"
mediacorral-proto = { version = "0.1.0", path = "../mediacorral-proto" }
pathdiff = "0.2.3"
prost = "0.13.5"
rayon = "1.10.0"
reqwest = { version = "0.12.19", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_with = { version = "3.12.0", features = ["hex"] }
serde_yaml = "0.9.34"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tonic = "0.13.1"
tonic-web = "0.13.1"
uuid = { version = "1.17.0", features = ["v4"] }
